изменение вызова вне цикла Event-service